syntax = "proto3";
package editor;

service Editor {
    rpc Authorize(AuthorizeRequest) returns (AuthorizeReply);
    rpc Disconnect(DisconnectRequest) returns (DisconnectReply);
    rpc SetCursor(SetCursorRequest) returns (SetCursorReply);
    rpc GetContent(GetContentRequest) returns (GetContentReply);
    rpc UpdateContent(UpdateContentRequest) returns (UpdateContentReply);
}

enum OperationType{
    INSERT = 0;
    DELETE = 1;
    REPLACE = 2;
}

message Pos{
    uint64 row = 1;
    uint64 col = 2;
}

message ContentPostion{
    Pos start = 1;     
    Pos end = 2;
}

message AuthorizeRequest{
    string password = 1;
}

message AuthorizeReply{
    bool success = 1;
    string file = 2;
}

message DisconnectRequest{
}

message DisconnectReply{
    bool success = 1;
}

message SetCursorRequest{
    string file = 1;
    uint64 row = 2;
    uint64 column = 3;
}

message SetCursorReply{
    bool success = 1;
}

message GetContentRequest{
    string hash = 1;
}

message GetContentReply{
    bool need_update = 1;
    string content = 2;
}

message UpdateContentRequest{
    OperationType op = 1;
    ContentPostion pos = 2;
    string content = 3;
}

message UpdateContentReply{
    bool success = 1;
    string content = 2;
}
